// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
Array [
  Array [
    "transition",
    undefined,
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={true}
    overlay={
      <SetTransitionPopup
        onSelect={[Function]}
        transitions={
          Array [
            "confirm",
            "resolve",
            "falsepositive",
            "wontfix",
          ]
        }
      />
    }
  >
    <ButtonLink
      className="issue-action issue-action-with-options js-issue-transition"
      onClick={[Function]}
    >
      <StatusHelper
        className="issue-meta-label"
        status="OPEN"
      />
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render with a resolution 1`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={false}
    overlay={
      <SetTransitionPopup
        onSelect={[Function]}
        transitions={
          Array [
            "reopen",
          ]
        }
      />
    }
  >
    <ButtonLink
      className="issue-action issue-action-with-options js-issue-transition"
      onClick={[Function]}
    >
      <StatusHelper
        className="issue-meta-label"
        resolution="FIXED"
        status="RESOLVED"
      />
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render with the action 1`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={false}
    overlay={
      <SetTransitionPopup
        onSelect={[Function]}
        transitions={
          Array [
            "confirm",
            "resolve",
            "falsepositive",
            "wontfix",
          ]
        }
      />
    }
  >
    <ButtonLink
      className="issue-action issue-action-with-options js-issue-transition"
      onClick={[Function]}
    >
      <StatusHelper
        className="issue-meta-label"
        status="OPEN"
      />
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render without the action when there is no transitions 1`] = `
<StatusHelper
  className="issue-meta-label"
  status="CLOSED"
/>
`;
